# RA_SSL

Reflection-aware_SSL/: README  ra_ssl_core.rviz
Reflection-aware_SSL/reflection_aware_ssl/: CMakeLists.txt  package.xml
Reflection-aware_SSL/reflection_aware_ssl/data/: octomap_stationary_source.bt
Reflection-aware_SSL/reflection_aware_ssl/include/: acousticRaytracing.h  particleFilter.h  rayBasedSSL.h  rayBasedSSL_typedef.h  raytracing.hxx  soundPotentialField.h
Reflection-aware_SSL/reflection_aware_ssl/include/SVD/: singular_value_decomposition.h
Reflection-aware_SSL/reflection_aware_ssl/launch/: SLAM_rayBasedSSL.launch  kobuki_run.launch  rayBased_soundLocalization.launch  rayBased_ssl_benchmark.launch
Reflection-aware_SSL/reflection_aware_ssl/src/: acousticRaytracing.cpp  particleFilter.cpp  rayBasedSSL.cpp  rayBasedSSL_benchmark_visualDetector_node.cpp  rayBasedSSL_node.cpp  soundPotentialField.cpp
Reflection-aware_SSL/reflection_aware_ssl/src/SVD/: singular_value_decomposition.cpp
Reflection-aware_SSL/reflection_aware_ssl_message/: CMakeLists.txt  package.xml
Reflection-aware_SSL/reflection_aware_ssl_message/msg/: estimatedPosition_AS_Project.msg  msgNavigation.msg  raybased_ssl_parameter.msg  visualizeConvergenceParticle.msg
Reflection-aware_SSL/reflection_aware_ssl_message/srv/: srvTargetPos.srv
Reflection-aware_SSL/tdoa_based_SSL/: CMakeLists.txt  CMakeLists.txt~  package.xml
Reflection-aware_SSL/tdoa_based_SSL/data/: rect_cube.mes  soundPositiondata.txt  soundPositiondata_v2.txt  test.txt
Reflection-aware_SSL/tdoa_based_SSL/include/dsplib/: parameters.c  parameters.h
Reflection-aware_SSL/tdoa_based_SSL/include/dsplib/Localisation/: beamformer.c  beamformer.h  potentialSources.c  potentialSources.h
Reflection-aware_SSL/tdoa_based_SSL/include/dsplib/Preprocessing/: micst.c  micst.h
Reflection-aware_SSL/tdoa_based_SSL/launch/: PS_pose_exploitation.launch  rt_audio.launch  sound_localization.launch  sound_localization_build_DB.launch  sound_localization_build_DB.launch~  sound_localization_live.launch~  sound_localization_pos.launch  sound_localization_saved.launch  sound_localization_saved.launch~
Reflection-aware_SSL/tdoa_based_SSL/src/: manyears_config.cpp  manyears_config.hpp  sound_position_exploitation.cpp  tdoa_ra_ssl_node.cpp
Reflection-aware_SSL/tdoa_based_SSL_message/: CMakeLists.txt  package.xml
Reflection-aware_SSL/tdoa_based_SSL_message/msg/: PotentialSources.msg  PotentialSourcesAverage.msg  SceneState.msg  SourceInfo.msg  SourceInfoT.msg  sourceGroundTruth.msg
